Sources/sdk/sccio.h

typedef struct IORFAREQUESTtag
{
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
    VTDWORD     dwReserved3;
    VTDWORD     dwReserved4;
} IORFAREQUEST, * PIORFAREQUEST;
typedef IOERR (IO_ENTRYMODPTR IOGETREMOTEDATAPROC) (HIOFILE hFile, PIORFAREQUEST pRequest, VTVOID * *ppData, VTDWORD *pdwDataSize);
typedef IOERR (IO_ENTRYMODPTR IOCLOSEREMOTEDATAPROC)(HIOFILE hFile);
typedef IOERR (IO_ENTRYMODPTR IOOPENREMOTESUBOBJECTPROC)(HIOFILE hFile, VTDWORD dwObjectId, VTDWORD dwStreamId, VTDWORD dwReserved1, VTDWORD dwReserved2, VTDWORD * pdwSpecType, VTVOID * *pSpec);
typedef struct IOBASERFAtag         /* Remote Filter Access */
{
    IOGETREMOTEDATAPROC             pGetRemoteData;
    IOCLOSEREMOTEDATAPROC           pCloseRemoteData;
    IOOPENREMOTESUBOBJECTPROC       pOpenRemoteSubObject;
    VTVOID *                  pDummy[5];
} IOBASERFA, * PIOBASERFA;
  /*
  |   Structures for different types
  */

typedef struct IORANGEFILEtag
{
    BASEIO    sBaseIO;        /* Underlying IO system */
    HIOFILE   hFile;          /* Underlying IO system's handle to the file */
    VTDWORD   dwFlags;        /* Info flags */
    VTHANDLE  hThis;          /* Handle to this structure */
#ifdef SCCFEATURE_64BITIO
    VTOFF_T   dwFirstByte;    /* Offset of the begining of the logical file */
    VTOFF_T   dwLastByte;     /* Offset of the end of the logical file */
    VTOFF_T   dwCurPos;       /* Offset in this rangefile wrt dwFirstByte */
#else
    VTDWORD   dwFirstByte;    /* Offset of the begining of the logical file */
    VTDWORD   dwLastByte;     /* Offset of the end of the logical file */
    VTDWORD   dwCurPos;       /* Offset in this rangefile wrt dwFirstByte */
#endif
    VTDWORD   dwSavedPos;     /* Pointer position of the reference file when the range was opened */
} IORANGEFILE, * PIORANGEFILE;
typedef struct IOCOMPRESSFILEtag
{
    BASEIO                  sBaseIO;                /* Underlying IO system */
    HIOFILE                 hFile;                  /* Underlying IO system's handle to the file */
    VTDWORD                 dwType;                 /* Type of compression */
    VTDWORD                 dwFlags;                /* Info flags */
    VTHANDLE                hThis;                  /* Handle to this structure */
    VTHANDLE                hBuffer;                /* Handle to a cached buffer of decompressed data */
    VTBYTE *                pBuffer;                /* pointer to cached buffer of decompressed data */
    VTHANDLE                hData;                  /* Handle for data needed for decompression */
    VTBYTE *                pData;                  /* pointer to data needed for decompression */
    VTDWORD                 dwBufferStartPos;       /* Tell of current buffer start position */
    VTDWORD                 dwBufferSize;           /* size in bytes of valid buffer */
    HIOFILE                 hTempFile;              /* Temp file to store extra */
#ifdef SCCFEATURE_64BITIO
    VTOFF_T                 dwTempFileSize;         /* Current temp file size */
    VTOFF_T                 dwTempFilePos;          /* Current position in the current temp file of decompressed data */
    VTOFF_T                 dwCurFilePos;           /* Current absolute file position of decompressed data */
#else
    VTDWORD                 dwTempFileSize;         /* Current temp file size */
    VTDWORD                 dwTempFilePos;          /* Current position in the current temp file of decompressed data */
    VTDWORD                 dwCurFilePos;           /* Current absolute file position of decompressed data */
#endif
    VTBYTE                  LastByte;               /* keep the last byte read for easy bit reading */
    VTBYTE                  nBitsLeft;
    VTHANDLE                hReadBuffer;            /* handle to buffer for input */
    VTBYTE *                pReadBuffer;            /* pointer to buffer for input */
    VTDWORD                 dwReadBufferSize;       /* size of read buffer */
    VTDWORD                 dwReadBufferPos;        /* position in the read buffer */
    VTDWORD                 dwReadBufferFilePos;    /* position of start of read buffer in the file */
    VTBOOL                  bReadBufferEOF;         /* is the read buffer at EOF */
    VTDWORD                 dwReserved1;
    VTDWORD                 dwReserved2;
    VTDWORD                 dwReserved3;
    VTSYSVAL                pResPointer1;
} IOCOMPRESSFILE, * PIOCOMPRESSFILE;
#define IO_COMPRESSREADBUFFERSIZE   16384
/* 
|  256KB seems to be the right balance between going to the disk infrequently
|  and not having too much memory to schlep around when we do go to disk
*/
#define IO_COMPRESSBUFFERSIZE       0x00040000
#define IO_COMPRESSTYPE_NONE        0
#define IO_COMPRESSTYPE_ZLIB        1
#define IO_COMPRESSTYPE_BASE64      2
/* LZSS Support added Nov 18, 1999 */
#define IO_COMPRESSTYPE_LZSS        3
/* Nov 2, 2000 PDF Decoding and Decompression methods types */
#define IO_COMPRESSTYPE_ASCII85     4
#define IO_COMPRESSTYPE_ASCIIHEX    5
#define IO_COMPRESSTYPE_RLE         6
#define IO_COMPRESSTYPE_FLATE       7
#define IO_COMPRESSTYPE_LZW         8
#define IO_COMPRESSTYPE_DCT         9
#define IO_COMPRESSTYPE_CCITT       11
#define IO_COMPRESSTYPE_RC4         13
/* PK Implode added Sept 11, 2000, currently supports Binary only */
#define IO_COMPRESSTYPE_PKMPLOD     10
/* MIF Ascii decode support */
#define IO_COMPRESSTYPE_MIFASCIIDECODE 12
/* Same as zlib compression, but without any header information */
#define IO_COMPRESSTYPE_ZLIB_NOHEADER  14
#define IO_COMPRESSTYPE_UUENCODED   15
#define IO_COMPRESSTYPE_XXENCODED   16
#define IO_COMPRESSTYPE_BINHEX      17
#define IO_COMPRESSTYPE_YENC        18
#define IO_COMPRESSTYPE_BTOA        19
#define IO_COMPRESSTYPE_QUOTEDPRINTABLE 20
#define IO_COMPRESSTYPE_UTF7        21
#define IO_COMPRESSTYPE_COMPRESSEDRTF   22
/* JBIG 2 added May 14, 2004 */
#define IO_COMPRESSTYPE_JBIG2       23
/* CAB support for MSZIP decompression */
#define IO_COMPRESSTYPE_MSZIP       24
/* CAB support for LZX decompression */
#define IO_COMPRESSTYPE_LZX         25
/* Advanced Encryption Standard (AES) decryption - 9/29/09 */
#define IO_COMPRESSTYPE_AES128      26
#define IO_COMPRESSTYPE_AES192      27
#define IO_COMPRESSTYPE_AES256      28
/* ZIP Crypto */
#define IO_COMPRESSTYPE_ZIPCRYPTO   29
/* define unknown compression */
#define IO_COMPRESSTYPE_UNKNOWN     255
/*
|  Structure definitions for memory mapped IO.
*/

#define IO_MEMFILE_INITSIZE 1024
typedef struct IOGENMEMFILEtag
{
    VTDWORD        dwSize;     /* should be set to the size of this structure */
    VTVOID *       pData;
    VTDWORD        dwDataSize; /* size of valid data */
    VTHANDLE       hData;
    VTDWORD        dwMemSize;  /* size of allocated buffer (must be >= dwDataSize) */
} IOGENMEMFILE, * PIOGENMEMFILE;
typedef struct IOMEMORYFILEtag
{
    BASEIO         sBaseIO;
    VTLPBYTE       pDataStart;
    VTLPBYTE       pCurrPos;
    VTDWORD        dwDataSize; /* size of valid data */
    VTHANDLE       hThis;
    VTDWORD        dwFlags;
    VTHANDLE       hData;
    VTDWORD        dwMemSize;  /* size of allocated buffer (must be >= dwDataSize) */
    HIOFILE        hRealFile;  /* if we need a ral temp file, use this */
}  IOMEMORYFILE, * PIOMEMORYFILE;
/*
|  Structure definitions for file access callbacks
*/

typedef struct IOREQUESTDATAtag
{
    VTDWORD   dwSize;          /* sizeof(IOREQUESTDATA)          */
    VTWORD    wFIId;           /* FI id of reference file        */
    VTDWORD   dwSpecType;      /* file spec type                 */
    VTVOID   *pSpec;           /* pointer to a file spec         */
    VTDWORD   dwRootSpecType;  /* root file spec type            */
    VTVOID   *pRootSpec;       /* pointer to the root file spec  */
	 VTDWORD   dwAttemptNumber; /* The number of times the callback has already been called for the currently requested item of information */
} IOREQUESTDATA, * PIOREQUESTDATA;
/*****************************************************************************
 * Start of Zip stuff
 ****************************************************************************/
/* Entry in table that stores sorted file names contained in zip file */
typedef struct tagFZFILEINFO
{
    VTDWORD                 dwNameLoc;  /* offset of filename in Fzu.pNames */
    VTWORD                  wNameLen;   /* length of filename */

#ifdef SCCFEATURE_64BITIO
    VTOFF_T                 dwLoc;      /* offset of actual file header */
    VTOFF_T                 dwDataLen;  /* length of compressed data */
#else
    VTDWORD                 dwLoc;      /* offset of actual file header */
    VTDWORD                 dwDataLen;  /* length of compressed data */
#endif
} FZFILEINFO, * PFZFILEINFO;
/* Support for Zip file I/O system */
typedef struct IOZIPFILEtag
{
    BASEIO                  sBaseIO;    /* Underlying IO system */

    VTHANDLE                hThis;      /* Handle to this structure */
    HIOFILE                 hRefFile;   /* zip file */
    VTBOOL                  bCaseAware; /* filenames are case insensitive */

    VTHANDLE                hFileTable; /* handle to pFileTable array */
    PFZFILEINFO             pFileTable; /* sorted array of files in zip */
    VTDWORD                 dwFileCnt;  /* number of files in zip */

    VTHANDLE                hNames;     /* handle to pNames */
    VTCHAR *                pNames;     /* concatenation of all filenames */
    VTDWORD                 dwNamesMax; /* allocated bytes in pNames */
    VTDWORD                 dwNamesUse; /* bytes used in pNames */
} IOZIPFILE,  * PIOZIPFILE;
/* I/O struct for opened nodes within a zip file */
typedef struct IOZIPNODEtag
{
    BASEIO                  sBaseIO;    /* Underlying IO system */

    VTHANDLE                hThis;      /* Handle to this structure */
    HIOFILE                 hRefFile;   /* either .hRange or .hCompress */

    VTDWORD                 dwIndex;    /* index into IOZIPFILE.pFileTable */
    HIOFILE                 hRange;     /* handle to range file */
    HIOFILE                 hCompress;  /* handle to compressed file */

    VTBYTE                  Buffer[512];/* space for buffered I/O */
#ifdef SCCFEATURE_64BITIO
    VTOFF_T                 dwBufLoc;   /* file location of start of buffer */
#else
    VTDWORD                 dwBufLoc;   /* file location of start of buffer */
#endif
    VTDWORD                 dwBufCnt;   /* amt of valid data in buffer */
#ifdef SCCFEATURE_64BITIO
    VTOFF_T                 lBufPos;    /* buffer offset wrt dwBufLoc */
    VTOFF_T                 dwVerify;   /* for verifying buffered zip IO */
#else
    VTLONG                  lBufPos;    /* buffer offset wrt dwBufLoc */
    VTDWORD                 dwVerify;   /* for verifying buffered zip IO */
#endif
} IOZIPNODE,  * PIOZIPNODE;
/* Structure returned by IOGetInfo(IOGETINFO_ZIPRANGE) */
typedef struct IOZIPRANGEtag
{
#ifdef SCCFEATURE_64BITIO
    VTOFF_T   dwFirstByte;
    VTOFF_T   dwLastByte;
#else
    VTDWORD   dwFirstByte;
    VTDWORD   dwLastByte;
#endif

    VTDWORD   dwCompressType;             /* IO_COMPRESSTYPE_xxxx */
} IOZIPRANGE, * PIOZIPRANGE;
/*****************************************************************************
 * End of Zip stuff
 ****************************************************************************/

/*****************************************************************************
 * Start of CAB stuff
 ****************************************************************************/
/* structure to provide access to CFDATA block structure */
typedef struct CABDATAtag
{
    HIOFILE     hRefFile;           /* range I/O file */

    VTWORD      wCompressedSize;    /* # of compressed bytes in block */
    VTWORD      wUncompressedSize;  /* # of uncompressed bytes in block */
} CABDATA, * PCABDATA;
#define IO_COMPRESSTYPE_NONE    0
#define IO_COMPRESSTYPE_ZLIB    1
#define IO_COMPRESSTYPE_BASE64  2
#define IOGetInfo(a,b,c)     ((PBASEIO)(a))->pGetInfo(a,b,c)