Sources/sccio.pas


     IOGETREMOTEDATAPROC = function (hFile:HIOFILE; pRequest:PIORFAREQUEST; var ppData:PVTVOID; var pdwDataSize:VTDWORD):IOERR;cdecl;

     IOCLOSEREMOTEDATAPROC = function (hFile:HIOFILE):IOERR;cdecl;

     IOOPENREMOTESUBOBJECTPROC = function (hFile:HIOFILE; dwObjectId:VTDWORD; dwStreamId:VTDWORD; dwReserved1:VTDWORD; dwReserved2:VTDWORD;
                  var pdwSpecType:VTDWORD; var pSpec:PVTVOID):IOERR;cdecl;
  { Remote Filter Access  }

     PIOBASERFA = ^IOBASERFA;
     IOBASERFA = record
          pGetRemoteData : IOGETREMOTEDATAPROC;
          pCloseRemoteData : IOCLOSEREMOTEDATAPROC;
          pOpenRemoteSubObject : IOOPENREMOTESUBOBJECTPROC;
          pDummy : array[0..4] of PVTVOID;
       end;
     PPIOBASERFA = ^PIOBASERFA;
  {
    |   Structures for different types
  }

  { Underlying IO system  }
  { Underlying IO system's handle to the file  }
  { Info flags  }
  { Handle to this structure  }
  { Pointer position of the reference file when the range was opened  }
  type
     PIORANGEFILE = ^IORANGEFILE;
     IORANGEFILE = record
          sBaseIO : TBASEIO;
          hFile : HIOFILE;
          dwFlags : VTDWORD;
          hThis : VTHANDLE;
{$ifdef SCCFEATURE_64BITIO}
  { Offset of the begining of the logical file  }
  { Offset of the end of the logical file  }
  { Offset in this rangefile wrt dwFirstByte  }
          dwFirstByte : VTOFF_T;
          dwLastByte : VTOFF_T;
          dwCurPos : VTOFF_T;
{$else}
  { Offset of the begining of the logical file  }
  { Offset of the end of the logical file  }
  { Offset in this rangefile wrt dwFirstByte  }
          dwFirstByte : VTDWORD;
          dwLastByte : VTDWORD;
          dwCurPos : VTDWORD;
{$endif}
          dwSavedPos : VTDWORD;
       end;
     PPIORANGEFILE = ^PIORANGEFILE;
  { Underlying IO system  }
  { Underlying IO system's handle to the file  }
  { Type of compression  }
  { Info flags  }
  { Handle to this structure  }
  { Handle to a cached buffer of decompressed data  }
  { pointer to cached buffer of decompressed data  }
  { Handle for data needed for decompression  }
  { pointer to data needed for decompression  }
  { Tell of current buffer start position  }
  { size in bytes of valid buffer  }
  { Temp file to store extra  }
  { keep the last byte read for easy bit reading  }
  { handle to buffer for input  }
  { pointer to buffer for input  }
  { size of read buffer  }
  { position in the read buffer  }
  { position of start of read buffer in the file  }
  { is the read buffer at EOF  }

  type

     PIOCOMPRESSFILE = ^IOCOMPRESSFILE;
     IOCOMPRESSFILE = record
          sBaseIO : TBASEIO;
          hFile : HIOFILE;
          dwType : VTDWORD;
          dwFlags : VTDWORD;
          hThis : VTHANDLE;
          hBuffer : VTHANDLE;
          pBuffer : PVTBYTE;
          hData : VTHANDLE;
          pData : PVTBYTE;
          dwBufferStartPos : VTDWORD;
          dwBufferSize : VTDWORD;
          hTempFile : HIOFILE;
{$ifdef SCCFEATURE_64BITIO}
  { Current temp file size  }
  { Current position in the current temp file of decompressed data  }
  { Current absolute file position of decompressed data  }
          dwTempFileSize : VTOFF_T;
          dwTempFilePos : VTOFF_T;
          dwCurFilePos : VTOFF_T;
{$else}
  { Current temp file size  }
  { Current position in the current temp file of decompressed data  }
  { Current absolute file position of decompressed data  }
          dwTempFileSize : VTDWORD;
          dwTempFilePos : VTDWORD;
          dwCurFilePos : VTDWORD;
{$endif}
          LastByte : VTBYTE;
          nBitsLeft : VTBYTE;
          hReadBuffer : VTHANDLE;
          pReadBuffer : PVTBYTE;
          dwReadBufferSize : VTDWORD;
          dwReadBufferPos : VTDWORD;
          dwReadBufferFilePos : VTDWORD;
          bReadBufferEOF : VTBOOL;
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
          dwReserved3 : VTDWORD;
          pResPointer1 : VTSYSVAL;
       end;
     PPIOCOMPRESSFILE = ^PIOCOMPRESSFILE;

  const
     IO_COMPRESSREADBUFFERSIZE = 16384;
  {
  |  256KB seems to be the right balance between going to the disk infrequently
  |  and not having too much memory to schlep around when we do go to disk
   }
     IO_COMPRESSBUFFERSIZE = $00040000;
     IO_COMPRESSTYPE_NONE = 0;
     IO_COMPRESSTYPE_ZLIB = 1;
     IO_COMPRESSTYPE_BASE64 = 2;
  { LZSS Support added Nov 18, 1999  }
     IO_COMPRESSTYPE_LZSS = 3;
  { Nov 2, 2000 PDF Decoding and Decompression methods types  }
     IO_COMPRESSTYPE_ASCII85 = 4;
     IO_COMPRESSTYPE_ASCIIHEX = 5;
     IO_COMPRESSTYPE_RLE = 6;
     IO_COMPRESSTYPE_FLATE = 7;
     IO_COMPRESSTYPE_LZW = 8;
     IO_COMPRESSTYPE_DCT = 9;
     IO_COMPRESSTYPE_CCITT = 11;
     IO_COMPRESSTYPE_RC4 = 13;
  { PK Implode added Sept 11, 2000, currently supports Binary only  }
     IO_COMPRESSTYPE_PKMPLOD = 10;
  { MIF Ascii decode support  }
     IO_COMPRESSTYPE_MIFASCIIDECODE = 12;
  { Same as zlib compression, but without any header information  }
     IO_COMPRESSTYPE_ZLIB_NOHEADER = 14;
     IO_COMPRESSTYPE_UUENCODED = 15;
     IO_COMPRESSTYPE_XXENCODED = 16;
     IO_COMPRESSTYPE_BINHEX = 17;
     IO_COMPRESSTYPE_YENC = 18;
     IO_COMPRESSTYPE_BTOA = 19;
     IO_COMPRESSTYPE_QUOTEDPRINTABLE = 20;
     IO_COMPRESSTYPE_UTF7 = 21;
     IO_COMPRESSTYPE_COMPRESSEDRTF = 22;
  { JBIG 2 added May 14, 2004  }
     IO_COMPRESSTYPE_JBIG2 = 23;
  { CAB support for MSZIP decompression  }
     IO_COMPRESSTYPE_MSZIP = 24;
  { CAB support for LZX decompression  }
     IO_COMPRESSTYPE_LZX = 25;
  { Advanced Encryption Standard (AES) decryption - 9/29/09  }
     IO_COMPRESSTYPE_AES128 = 26;
     IO_COMPRESSTYPE_AES192 = 27;
     IO_COMPRESSTYPE_AES256 = 28;
  { ZIP Crypto  }
     IO_COMPRESSTYPE_ZIPCRYPTO = 29;
  { define unknown compression  }
     IO_COMPRESSTYPE_UNKNOWN = 255;
  {
  |  Structure definitions for memory mapped IO.
   }
     IO_MEMFILE_INITSIZE = 1024;
  { should be set to the size of this structure  }
  { size of valid data  }
  { size of allocated buffer (must be >= dwDataSize)  }

  type

     PIOGENMEMFILE = ^IOGENMEMFILE;
     IOGENMEMFILE = record
          dwSize : VTDWORD;
          pData : PVTVOID;
          dwDataSize : VTDWORD;
          hData : VTHANDLE;
          dwMemSize : VTDWORD;
       end;
     PPIOGENMEMFILE = ^PIOGENMEMFILE;
  { size of valid data  }
  { size of allocated buffer (must be >= dwDataSize)  }
  { if we need a ral temp file, use this  }

     PIOMEMORYFILE = ^IOMEMORYFILE;
     IOMEMORYFILE = record
          sBaseIO : TBASEIO;
          pDataStart : VTLPBYTE;
          pCurrPos : VTLPBYTE;
          dwDataSize : VTDWORD;
          hThis : VTHANDLE;
          dwFlags : VTDWORD;
          hData : VTHANDLE;
          dwMemSize : VTDWORD;
          hRealFile : HIOFILE;
       end;
     PPIOMEMORYFILE = ^PIOMEMORYFILE;
  {
  |  Structure definitions for file access callbacks
   }
  { sizeof(IOREQUESTDATA)           }
  { FI id of reference file         }
  { file spec type                  }
  { pointer to a file spec          }
  { root file spec type             }
  { pointer to the root file spec   }
  { The number of times the callback has already been called for the currently requested item of information  }

     PIOREQUESTDATA = ^IOREQUESTDATA;
     IOREQUESTDATA = record
          dwSize : VTDWORD;
          wFIId : VTWORD;
          dwSpecType : VTDWORD;
          pSpec : PVTVOID;
          dwRootSpecType : VTDWORD;
          pRootSpec : PVTVOID;
          dwAttemptNumber : VTDWORD;
       end;
     PPIOREQUESTDATA = ^PIOREQUESTDATA;
  {****************************************************************************
   * Start of Zip stuff
   *************************************************************************** }
  { Entry in table that stores sorted file names contained in zip file  }

  type

     PFZFILEINFO = ^FZFILEINFO;
     FZFILEINFO = record
          { offset of filename in Fzu.pNames  }
          dwNameLoc : VTDWORD;
          { length of filename  }
          wNameLen : VTWORD;
{$ifdef SCCFEATURE_64BITIO}
  { offset of actual file header  }
  { length of compressed data  }
          dwLoc : VTOFF_T;
          dwDataLen : VTOFF_T;
{$else}
  { offset of actual file header  }
  { length of compressed data  }
          dwLoc : VTDWORD;
          dwDataLen : VTDWORD;
{$endif}
       end;
     PPFZFILEINFO = ^PFZFILEINFO;
  { Support for Zip file I/O system  }
  { Underlying IO system  }
  { Handle to this structure  }
  { zip file  }
  { filenames are case insensitive  }
  { handle to pFileTable array  }
  { sorted array of files in zip  }
  { number of files in zip  }
  { handle to pNames  }
  { concatenation of all filenames  }
  { allocated bytes in pNames  }
  { bytes used in pNames  }

     PIOZIPFILE = ^IOZIPFILE;
     IOZIPFILE = record
          sBaseIO : TBASEIO;
          hThis : VTHANDLE;
          hRefFile : HIOFILE;
          bCaseAware : VTBOOL;
          hFileTable : VTHANDLE;
          pFileTable : PFZFILEINFO;
          dwFileCnt : VTDWORD;
          hNames : VTHANDLE;
          pNames : PVTCHAR;
          dwNamesMax : VTDWORD;
          dwNamesUse : VTDWORD;
       end;
     PPIOZIPFILE = ^PIOZIPFILE;
  { I/O struct for opened nodes within a zip file  }
  { Underlying IO system  }
  { Handle to this structure  }
  { either .hRange or .hCompress  }
  { index into IOZIPFILE.pFileTable  }
  { handle to range file  }
  { handle to compressed file  }
  { space for buffered I/O  }
  { amt of valid data in buffer  }

  type

     PIOZIPNODE = ^IOZIPNODE;
     IOZIPNODE = record
          sBaseIO : TBASEIO;
          hThis : VTHANDLE;
          hRefFile : HIOFILE;
          dwIndex : VTDWORD;
          hRange : HIOFILE;
          hCompress : HIOFILE;
          Buffer : array[0..511] of VTBYTE;
{$ifdef SCCFEATURE_64BITIO}
  { file location of start of buffer  }
          dwBufLoc : VTOFF_T;
{$else}
  { file location of start of buffer  }
          dwBufLoc : VTDWORD;
{$endif}
          dwBufCnt : VTDWORD;
{$ifdef SCCFEATURE_64BITIO}
  { buffer offset wrt dwBufLoc  }
  { for verifying buffered zip IO  }
          lBufPos : VTOFF_T;
          dwVerify : VTOFF_T;
{$else}
  { buffer offset wrt dwBufLoc  }
  { for verifying buffered zip IO  }
          lBufPos : VTLONG;
          dwVerify : VTDWORD;
{$endif}
       end;
     PPIOZIPNODE = ^PIOZIPNODE;
  { Structure returned by IOGetInfo(IOGETINFO_ZIPRANGE)  }
  { IO_COMPRESSTYPE_xxxx  }

  type

     PIOZIPRANGE = ^IOZIPRANGE;
     IOZIPRANGE = record
{$ifdef SCCFEATURE_64BITIO}
          dwFirstByte : VTOFF_T;
          dwLastByte : VTOFF_T;
{$else}
          dwFirstByte : VTDWORD;
          dwLastByte : VTDWORD;
{$endif}
          dwCompressType : VTDWORD;
       end;
     PPIOZIPRANGE = ^PIOZIPRANGE;
  {****************************************************************************
   * End of Zip stuff
   *************************************************************************** }
  {****************************************************************************
   * Start of CAB stuff
   *************************************************************************** }
  { structure to provide access to CFDATA block structure  }
  { range I/O file  }
  { # of compressed bytes in block  }
  { # of uncompressed bytes in block  }

     PCABDATA = ^CABDATA;
     CABDATA = record
          hRefFile : HIOFILE;
          wCompressedSize : VTWORD;
          wUncompressedSize : VTWORD;
       end;
     PPCABDATA = ^PCABDATA;
  { structure to provide access to CFFILE info  }
  { offset into CABFILE.pNames  }
  { uncompressed size of this file in bytes  }
  { uncompressed offset of file in the folder  }
  { index into the CFFOLDER area  }
  { date stamp for this file  }
  { time stamp for this file  }
